--- a/Monge/css/sobre.scss
+++ b/Monge/css/sobre.scss
@@ -52,6 +52,7 @@ html, body{
         }
     }
     .sobre{
+        margin-top: 3%;
         display: flex;
         justify-content: space-around;
         align-items: center;
