--- a/Monge/css/ilhabela.scss
+++ b/Monge/css/ilhabela.scss
@@ -12,9 +12,10 @@ html, body{
 
 .head{
     width: 100%;
-    height:100vh;
+    height:auto;
+    padding-bottom: 5%;
     background-color: rgba(45, 46, 46, 0.075);
-    background-image: url("../image/contato.jpg");
+    background-image: url("../image/ilhabela.jpeg");
     background-repeat: no-repeat;
     background-size: cover;
 
@@ -51,51 +52,43 @@ html, body{
         }
     }
     
-    .contato{
-        margin-top: 3%;
-        width: 60%;
-        height: 60%;
+    .ilha{
+        margin-top: 5%;
+        width: 80%;
+        height: fit-content;
         margin-left: auto;
         margin-right: auto;
-        background-color: rgba(164, 172, 172, 0.603);
-        padding: 20px;
-        border: 2px solid black;
-        border-radius: 20px;
-        .form{
-            display: block;
-            height: 100%;
-            .entrada {
-                margin: 3px auto;
-                padding-left: 10px;
-                width: 100%;
-                height: 10%;
-                border-radius: 5px;
-            }
-            .mensagem{
-                margin: 15px auto 3px auto;
-                padding-left: 10px;
-                width: 100%;
-                height: 30%;
-                border-radius: 5px;
-            }
-            label {
-            font-size: 13px;
-            }
-        
-            .button {
-                width: 20%;
-                height: 8vh;
-                margin-left: auto;
-                margin-right: auto;
-                border-radius: 5px;
-                background-color: rgb(88, 110, 235);
-                color: white;
-                font-size: 15px;
+        border: 1px solid black;
+        border-radius: 3%;
+        background-color:rgba(164, 172, 172, 0.76);
+        padding: 3%;
 
-                &:hover {
-                    background: rgb(46, 69, 201);
+        h2, h3{
+            text-align: center;
+        }
+        .cidade, .praias, .cachoeiras{
+            display: flex;
+            margin: 5% 0;
+            .figura{
+                width: 40%;
+                img{
+                    width: 100%;
+                    border-radius: 3%;
                 }
             }
+            .text{
+                width: 60%;
+                padding-left: 3%;
+                
+                h2,h3{
+                    margin-bottom: 4%;
+                }
+                h3{
+                    margin-top:3%
+                }
+                
+            }
+            
         }
     }
         
