--- a/Monge/css/sobre.css
+++ b/Monge/css/sobre.css
@@ -52,6 +52,7 @@ html, body {
   width: 10vh;
 }
 .head .sobre {
+  margin-top: 3%;
   display: flex;
   justify-content: space-around;
   align-items: center;
