--- a/Monge/css/corpo.css
+++ b/Monge/css/corpo.css
@@ -3,7 +3,7 @@
 ***************/
 .location {
   padding: 100px 0;
-  background-image: url(../image/castelhanos.jpg);
+  background-image: url(../../Monge/image/castelhanos.jpg);
   background-size: cover;
   vertical-align: middle;
 }
