--- a/Monge/css/imagens.scss
+++ b/Monge/css/imagens.scss
@@ -12,7 +12,7 @@ html, body{
 
 .head{
     width: 100%;
-    height:auto;
+    height:fit-content;
     padding-bottom: 5%;
     background-color: rgba(224, 235, 74, 0.719);
     margin-left: auto;
@@ -55,20 +55,26 @@ html, body{
     
     .galery{
         width: 80%;
-        height: 100vh;
-        margin: 2% auto 0 auto;
+        height: 100%;
+        margin-left: auto;
+        margin-right: auto;
         display: flex;
-        flex-direction: column;
-        flex-wrap: wrap;
         padding-top: 3%;
+        justify-content: space-around;
 
-        div{
-            width: 24%;
+        .container{
+            width: 47%;
+            height: auto;
+            margin: 3% 0;
+            text-align: center;
 
             img{
                 width: 100%;
+                height: auto;
                 border: 3px solid rgb(94, 93, 90);
                 border-radius: 10px;
+                margin-left: auto;
+                margin-right: auto;
 
                 &:hover{
                     border-radius: 0;
@@ -79,7 +85,7 @@ html, body{
                     -o-transform: scale(1.5);
                     -ms-transform: scale(1.5);
                     transform: scale(1.5);
-                    transition: 0.5s;
+                    transition: 0.3s;
                 }
             }
         }
