--- a/Monge/css/style.css
+++ b/Monge/css/style.css
@@ -12,8 +12,7 @@ html, body {
 }
 
 .head {
-  display: flex;
-  justify-content: space-around;
+  vertical-align: middle;
   width: 100%;
   height: 100vh;
   background-color: rgba(45, 46, 46, 0.075);
@@ -48,7 +47,31 @@ html, body {
   border-radius: 5px;
   background-color: #222222;
 }
+.head .cabeca .menu a:hover {
+  transform: scale(1.1);
+  transition: 0.3s;
+}
 .head .cabeca .social img {
   margin-top: 15px;
   width: 10vh;
+}
+.head .pousada {
+  display: none;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 8%;
+  border: 1px solid #383636;
+  border-radius: 5px;
+  box-shadow: 2% 2% 70% black;
+  background-color: rgba(179, 175, 175, 0.774);
+  width: 50%;
+  height: 40%;
+  vertical-align: middle;
+}
+.head .pousada h1, .head .pousada h2, .head .pousada h3 {
+  text-align: center;
+  vertical-align: middle;
+  margin: 5% auto;
+  color: #2d2e16;
+  font-family: "Play", sans-serif;
 }/*# sourceMappingURL=style.css.map */
