--- a/Monge/css/style.scss
+++ b/Monge/css/style.scss
@@ -11,8 +11,7 @@ html, body{
 }
 
 .head{
-    display: flex;
-    justify-content: space-around;
+    vertical-align: middle;
     width: 100%;
     height:100vh;
     background-color: rgba(45, 46, 46, 0.075);
@@ -38,6 +37,8 @@ html, body{
             justify-content: space-around;
             font-size: 3vh;
             margin: 50px 10px 0 10px;
+
+            
         }
         .menu a{
             color: whitesmoke;
@@ -46,10 +47,40 @@ html, body{
             border: 1px solid rgb(34, 34, 34);
             border-radius: 5px;
             background-color: rgb(34, 34, 34);
+
+            &:hover{
+                -webkit-transform: scale(1.1);
+                -moz-transform: scale(1.1);
+                -o-transform: scale(1.1);
+                -ms-transform: scale(1.1);
+                transform: scale(1.1);
+                transition: 0.3s;
+            }
         }
         .social img{
             margin-top: 15px;
             width: 10vh;
+        }
+    }
+    .pousada{
+        display: none;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 8%;
+        border: 1px solid rgb(56, 54, 54);
+        border-radius: 5px;
+        box-shadow: 2% 2% 70% black;
+        background-color: rgba(179, 175, 175, 0.774);
+        width: 50%;
+        height: 40%;
+        vertical-align: middle;
+        
+        h1,h2,h3{
+            text-align: center;
+            vertical-align: middle;
+            margin: 5% auto;
+            color: rgb(45, 46, 22);
+            font-family: 'Play', sans-serif;
         }
     }
     
