--- a/Monge/css/imagens.css
+++ b/Monge/css/imagens.css
@@ -56,31 +56,30 @@ html, body {
 }
 .head .galery {
   width: 80%;
-  height: 100%;
+  height: 160vh;
   margin-left: auto;
   margin-right: auto;
   display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
   padding-top: 3%;
-  justify-content: space-around;
 }
-.head .galery .container {
-  width: 47%;
+.head .galery div {
+  width: 30%;
   height: auto;
-  margin: 3% 0;
-  text-align: center;
-}
-.head .galery .container img {
-  width: 100%;
-  height: auto;
-  border: 3px solid #5e5d5a;
-  border-radius: 10px;
   margin-left: auto;
   margin-right: auto;
 }
-.head .galery .container img:hover {
+.head .galery div img {
+  width: 100%;
+  border: 2px solid black;
+  border-radius: 10px;
+}
+.head .galery div img:hover {
   border-radius: 0;
   border: 2px solid #7cdf64;
   box-shadow: 0 0 5px #27461f;
   transform: scale(1.5);
   transition: 0.3s;
+  overflow: hidden;
 }/*# sourceMappingURL=imagens.css.map */
