--- a/Monge/css/imagens.scss
+++ b/Monge/css/imagens.scss
@@ -55,40 +55,44 @@ html, body{
     
     .galery{
         width: 80%;
-        height: 100%;
+        height: 160vh;
         margin-left: auto;
         margin-right: auto;
         display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
         padding-top: 3%;
-        justify-content: space-around;
+        
 
-        .container{
-            width: 47%;
-            height: auto;
-            margin: 3% 0;
-            text-align: center;
 
-            img{
-                width: 100%;
-                height: auto;
-                border: 3px solid rgb(94, 93, 90);
-                border-radius: 10px;
+            div{                               
+                width: 30%;                
+                height: auto;                                
                 margin-left: auto;
                 margin-right: auto;
 
-                &:hover{
-                    border-radius: 0;
-                    border: 2px solid rgb(124, 223, 100);
-                    box-shadow: 0 0 5px rgb(39, 70, 31);
-                    -webkit-transform: scale(1.5);
-                    -moz-transform: scale(1.5);
-                    -o-transform: scale(1.5);
-                    -ms-transform: scale(1.5);
-                    transform: scale(1.5);
-                    transition: 0.3s;
-                }
+
+                img{
+
+                    width: 100%;
+                    border: 2px solid black; 
+                    border-radius: 10px;
+                
+                    &:hover{                            
+                        border-radius: 0;
+                        border: 2px solid rgb(124, 223, 100);
+                        box-shadow: 0 0 5px rgb(39, 70, 31);
+                        -webkit-transform: scale(1.5);
+                        -moz-transform: scale(1.5);
+                        -o-transform: scale(1.5);
+                        -ms-transform: scale(1.5);
+                        transform: scale(1.5);
+                        transition: 0.3s;
+                        overflow: hidden;
+                    }       
+                }         
             }
-        }
+        
 
     }
         
