--- a/Monge/css/responsive.css
+++ b/Monge/css/responsive.css
@@ -6,4 +6,39 @@
   .botaoMenu, .mobile {
     display: block;
   }
+}
+@media (min-width: 701px) {
+  .avaliacoesp {
+    display: none;
+  }
+}
+@media (max-width: 700px) {
+  .avaliacoesp {
+    display: block;
+  }
+
+  .avaliacoes {
+    display: none;
+  }
+}
+@media (max-width: 768px) {
+  .quarto {
+    display: block;
+  }
+  .quarto .slider {
+    width: 100%;
+  }
+  .quarto .descricao {
+    width: 100%;
+  }
+
+  .galery {
+    display: block;
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
+    height: fit-content;
+  }
+  .galery div {
+    width: 70%;
+  }
 }/*# sourceMappingURL=responsive.css.map */
