--- a/Monge/css/corpo.css
+++ b/Monge/css/corpo.css
@@ -61,12 +61,11 @@
 
 .figmensagem {
   position: fixed;
-  right: 5px;
-  bottom: 60px;
-  width: 7vh;
+  right: -15px;
+  bottom: 5px;
+  width: 7%;
   margin-right: 1%;
-  font-weight: bold;
-  color: #551b1b;
+  color: red;
   -webkit-animation: neon 3s alternate infinite ease-in-out;
           animation: neon 3s alternate infinite ease-in-out;
   --cor-neon: red;
@@ -91,12 +90,13 @@
   }
 }
 #icon-whats {
-  height: 7vh;
-  width: 7vh;
+  height: 5%;
+  width: 5%;
   position: fixed;
-  bottom: 30px;
+  bottom: 65px;
   right: 5px;
   box-shadow: 0 0 10px black;
+  border: 3px solid black;
   border-radius: 100%;
   -webkit-animation: neon 1s alternate infinite ease-in-out;
           animation: neon 1s alternate infinite ease-in-out;
