--- a/Monge/css/ilhabela.css
+++ b/Monge/css/ilhabela.css
@@ -60,7 +60,7 @@ html, body {
   margin-left: auto;
   margin-right: auto;
   border: 1px solid black;
-  border-radius: 3%;
+  border-radius: 5px;
   background-color: rgba(164, 172, 172, 0.76);
   padding: 3%;
 }
