--- a/Monge/css/sobre.css
+++ b/Monge/css/sobre.css
@@ -13,11 +13,14 @@ html, body {
 
 .head {
   width: 100%;
-  height: 100vh;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
   background-color: rgba(45, 46, 46, 0.075);
   background-image: url("../image/sobre.jpg");
   background-repeat: no-repeat;
   background-size: cover;
+  padding-bottom: 20px;
 }
 .head .cabeca {
   display: flex;
@@ -61,24 +64,51 @@ html, body {
   margin-left: auto;
   margin-right: auto;
   width: 70%;
-  height: 60%;
+  height: 400px;
   background-color: rgba(164, 172, 172, 0.603);
   padding: 20px;
   border: 2px solid black;
   border-radius: 20px;
   font-size: 2.3vh;
 }
-.head .sobre .img {
-  display: block;
-  width: 100%;
-  height: auto;
-  padding: 0 20px 10px 0;
-  align-items: center;
+.head .avaliacoes {
+  width: 80%;
+  margin: 10% auto 0 auto;
 }
-.head .sobre .img img {
+.head .avaliacoes h2 {
+  text-align: center;
+  font-size: 7vh;
+}
+.head .avaliacoes .regular img {
+  width: 97%;
+  height: 30vh;
+  margin: 10px;
+  border: 1px solid black;
+  box-shadow: 0 0 5px black;
+}
+.head .avaliacoesp {
+  width: 100%;
+  margin: 10% auto 0 auto;
+}
+.head .avaliacoesp h2 {
+  text-align: center;
+  font-size: 100%;
+}
+.head .avaliacoesp .imgav {
+  width: 100%;
+  margin: auto;
+}
+.head .avaliacoesp .imgav .avimagens {
   width: 100%;
   height: auto;
-  vertical-align: center;
-  border-radius: 10%;
-  box-shadow: 2px 2px 0 black;
+  display: flex;
+  justify-content: space-around;
+  text-align: center;
+}
+.head .avaliacoesp .imgav .avimagens img {
+  width: 45%;
+  height: auto;
+  margin: 5px;
+  border: 1px solid black;
+  box-shadow: 0 0 5px black;
 }/*# sourceMappingURL=sobre.css.map */
