--- a/Monge/css/sobre.scss
+++ b/Monge/css/sobre.scss
@@ -12,11 +12,13 @@ html, body{
 
 .head{
     width: 100%;
-    height:100vh;
+    height:fit-content;
     background-color: rgba(45, 46, 46, 0.075);
     background-image: url("../image/sobre.jpg");
     background-repeat: no-repeat;
     background-size: cover;
+    padding-bottom: 20px;
+    
 
     .cabeca{
         display: flex;
@@ -61,28 +63,68 @@ html, body{
         margin-left: auto;
         margin-right: auto;
         width: 70%;
-        height: 60%;
+        height: 400px;
         background-color: rgba(164, 172, 172, 0.603);
         padding: 20px;
         border: 2px solid black;
         border-radius: 20px;
         font-size: 2.3vh;
 
-        .img{
-            display: block;
-            width:100%;
-            height: auto;
-            padding:0 20px 10px 0;
-            align-items: center;
+    }
+
+
+    .avaliacoes{
+        width: 80%;
+        margin: 10% auto 0 auto;
+
+        h2{
+            text-align: center;
+            font-size: 7vh;
+        }
+        .regular{
+            
+
             img{
-                width: 100%;
-                height: auto;
-                vertical-align:center;
-                border-radius: 10%;
-                box-shadow: 2px 2px 0 black;
+                width: 97%;
+                height: 30vh;
+                margin: 10px;
+                border: 1px solid black;
+                box-shadow: 0 0 5px black;
             }
         }
     }
+
+    .avaliacoesp{
+        width: 100%;
+        margin: 10% auto 0 auto;              
+
+        h2{
+            text-align: center;
+            font-size: 100%;
+        }
+        .imgav{
+            width: 100%;
+            margin:auto;
+            .avimagens{
+                    width: 100%;
+                    height: auto;                                       
+                    display: flex;
+                    justify-content: space-around;
+                    text-align: center;
+
+                    img{
+                        width: 45%;
+                        height: auto;
+                        margin: 5px;
+                        border: 1px solid black;
+                        box-shadow: 0 0 5px black;
+                    }
+            }
+        }   
+    }
 }
+
+
+
 
 
