--- a/Monge/css/ilhabela.css
+++ b/Monge/css/ilhabela.css
@@ -3,7 +3,7 @@
   padding: 0;
   text-decoration: none;
   list-style: none;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 html, body {
@@ -22,13 +22,15 @@ html, body {
 }
 .head .cabeca {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   width: 100%;
   align-content: baseline;
+  vertical-align: middle;
 }
 .head .cabeca .logo {
   width: 20vh;
   margin-top: 15px;
+  margin-left: 20px;
   border: 2px solid black;
   border-radius: 100%;
   box-shadow: 3px 3px 0 #222222;
@@ -37,7 +39,10 @@ html, body {
   display: flex;
   justify-content: space-around;
   font-size: 3vh;
-  margin: 50px 10px 0 10px;
+  margin: 5vh 1vh 0 1vh;
+  position: fixed;
+  transform: translateX(-110%);
+  z-index: 90;
 }
 .head .cabeca .menu a {
   color: whitesmoke;
