--- a/Monge/css/imagens.css
+++ b/Monge/css/imagens.css
@@ -3,7 +3,7 @@
   padding: 0;
   text-decoration: none;
   list-style: none;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 html, body {
@@ -23,14 +23,15 @@ html, body {
 }
 .head .cabeca {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   width: 100%;
-  align-content: initial;
-  margin-bottom: 1px solid #4e4d4d;
+  align-content: baseline;
+  vertical-align: middle;
 }
 .head .cabeca .logo {
   width: 20vh;
   margin-top: 15px;
+  margin-left: 20px;
   border: 2px solid black;
   border-radius: 100%;
   box-shadow: 3px 3px 0 #222222;
@@ -39,7 +40,10 @@ html, body {
   display: flex;
   justify-content: space-around;
   font-size: 3vh;
-  margin: 50px 10px 0 10px;
+  margin: 5vh 1vh 0 1vh;
+  position: fixed;
+  transform: translateX(-110%);
+  z-index: 90;
 }
 .head .cabeca .menu a {
   color: whitesmoke;
@@ -63,6 +67,7 @@ html, body {
   padding-top: 3%;
   justify-content: space-between;
   margin-left: auto;
+  margin-right: auto;
 }
 .head .galery div {
   width: 33%;
