--- a/Monge/css/imagens.scss
+++ b/Monge/css/imagens.scss
@@ -3,7 +3,7 @@
     padding: 0;
     text-decoration: none;
     list-style: none;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 html, body{
     width: 100%;
@@ -20,14 +20,15 @@ html, body{
 
     .cabeca{
         display: flex;
-        justify-content: space-around;
+        justify-content: space-between;
         width: 100%;
-        align-content:initial;
-        margin-bottom: 1px solid rgb(78, 77, 77);
-        
+        align-content: baseline;
+        vertical-align: middle;
+
         .logo{
             width: 20vh;
             margin-top: 15px;
+            margin-left: 20px;
             border: 2px solid black;
             border-radius: 100%;
             box-shadow: 3px 3px 0 rgb(34, 34, 34);
@@ -36,7 +37,10 @@ html, body{
             display: flex;
             justify-content: space-around;
             font-size: 3vh;
-            margin: 50px 10px 0 10px;
+            margin: 5vh 1vh 0 1vh;
+            position: fixed;      
+            transform: translateX(-110%);    
+            z-index: 90;  
         }
         .menu a{
             color: whitesmoke;
@@ -64,6 +68,7 @@ html, body{
         padding-top: 3%;
         justify-content: space-between;
         margin-left: auto;
+        margin-right: auto;
         
         
 
