--- a/Monge/css/sobre.css
+++ b/Monge/css/sobre.css
@@ -3,7 +3,7 @@
   padding: 0;
   text-decoration: none;
   list-style: none;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 html, body {
@@ -24,7 +24,7 @@ html, body {
 }
 .head .cabeca {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   width: 100%;
   align-content: baseline;
   vertical-align: middle;
@@ -32,6 +32,7 @@ html, body {
 .head .cabeca .logo {
   width: 20vh;
   margin-top: 15px;
+  margin-left: 20px;
   border: 2px solid black;
   border-radius: 100%;
   box-shadow: 3px 3px 0 #222222;
@@ -41,6 +42,9 @@ html, body {
   justify-content: space-around;
   font-size: 3vh;
   margin: 5vh 1vh 0 1vh;
+  position: fixed;
+  transform: translateX(-110%);
+  z-index: 90;
 }
 .head .cabeca .menu a {
   color: whitesmoke;
