--- a/Monge/css/sobre.scss
+++ b/Monge/css/sobre.scss
@@ -3,7 +3,7 @@
     padding: 0;
     text-decoration: none;
     list-style: none;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 html, body{
     width: 100%;
@@ -22,7 +22,7 @@ html, body{
 
     .cabeca{
         display: flex;
-        justify-content: space-around;
+        justify-content: space-between;
         width: 100%;
         align-content: baseline;
         vertical-align: middle;
@@ -30,6 +30,7 @@ html, body{
         .logo{
             width: 20vh;
             margin-top: 15px;
+            margin-left: 20px;
             border: 2px solid black;
             border-radius: 100%;
             box-shadow: 3px 3px 0 rgb(34, 34, 34);
@@ -39,6 +40,9 @@ html, body{
             justify-content: space-around;
             font-size: 3vh;
             margin: 5vh 1vh 0 1vh;
+            position: fixed;      
+            transform: translateX(-110%);    
+            z-index: 90;  
         }
         .menu a{
             color: whitesmoke;
