--- a/Monge/css/stile.css
+++ b/Monge/css/stile.css
@@ -3,7 +3,7 @@
 }
 
 .menuMobile {
-    position: absolute;
+    position: fixed;    
     top: -100%;
     right: -100%;
     width: 100px;
@@ -40,10 +40,11 @@
     top: 50px;
     right: 10px;
     text-align: justify;
+    z-index: 90;
 }
 
 .botaoMenu {
-    position: absolute;
+    position: fixed;
     top: 20px;
     right: 20px;
 }
