--- a/meulinktree/css/style.css
+++ b/meulinktree/css/style.css
@@ -69,9 +69,13 @@ h2 {
     margin: 0 auto;
 }
 
+.skills li{
+    margin: 5px;
+}
+
 .skills img{
     width: 40px;
-    margin: 10px;
+    height: 40px;
     box-shadow: 5px 5px 10px rgb(2, 2, 2);
 }
 
