--- a/Meu link tree/css/style.css
+++ b/Meu link tree/css/style.css
@@ -84,6 +84,10 @@ h2 {
     text-align: center;
 }
 
+.cursos :last-child{
+    padding-bottom: 15px;
+}
+
 .links-list li {
     margin: 10px 20px;
     list-style: none;
